Update style.css file

--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@ h2.title {
   align-items: flex-start;
   padding: 0;
   gap: 16px;
-  margin-left: -24px;
+  margin-left: 0px;
   margin-bottom: 12px;
 }
 
@@ -1265,7 +1265,7 @@ button:active {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     width: 100%;
-    margin: 114px 24px auto 0;
+    margin: 114px 24px auto 24px;
   }
 
   h2.about-title {
@@ -1291,12 +1291,14 @@ button:active {
     align-items: center;
     width: 200px;
     height: 40px;
-    margin-top: 20px;
+    margin-top: 12px;
+    margin-left: -36px;
   }
 
   .social-media-connect {
     margin-top: 50px;
     line-height: 24px;
+    margin-left: -12px;
   }
 
   .about-btn {
