--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   overflow-x: hidden;
 }
 
-header {
+.navigation {
   display: flex;
   height: 48px;
   justify-content: space-between;
@@ -39,12 +39,63 @@ a.logo {
   }
 }
 
-a.union {
+.burger {
+  display: block;
+  color: #6070ff;
   padding-top: 5px;
-  margin-right: 35px;
+  cursor: pointer;
+  position: absolute;
+  z-index: 1000;
+  right: 10%;
 }
 
 .menu {
+  display: block;
+  list-style: none;
+  position: fixed;
+  padding: 4rem;
+  top: -120%;
+  left: 0;
+  background: #6070ff;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+}
+
+nav a {
+  margin-bottom: 40px;
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 44px;
+  letter-spacing: 0;
+  text-align: left;
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.navigation nav {
+  position: fixed;
+  top: -120%;
+  width: 100%;
+  height: 100%;
+  background-color: #6070ff;
+  opacity: 0.9;
+}
+
+.fa-times::before,
+.fa-xmark::before {
+  content: "\f00d";
+  color: #fff;
+}
+
+.navigation nav.nav-toggle {
+  top: 0;
+}
+
+.desktop-menu {
   display: none;
 }
 
@@ -829,7 +880,7 @@ button:active {
     height: auto;
   }
 
-  header {
+  .navigation {
     position: fixed;
     width: 100%;
     z-index: 1;
@@ -853,11 +904,11 @@ button:active {
     margin-left: 150px;
   }
 
-  .union {
+  #union, .menu {
     display: none;
   }
 
-  nav.menu {
+  .desktop-menu {
     display: flex;
     flex-direction: row;
     margin-right: 100px;
@@ -868,10 +919,10 @@ button:active {
     list-style-type: none;
   }
 
-  header .menu a {
+  .desktop-menu a {
     font-family: "poppins", sans-serif;
     font-style: normal;
-    color: #344563;
+    color: #344563; 
     text-decoration: none;
     font-size: 15px;
     line-height: 20px;
@@ -879,7 +930,7 @@ button:active {
     transition: all 0.5s ease-in-out;
   }
 
-  header .menu a:hover {
+  .navigation .desktop-menu a:hover {
     letter-spacing: 2px;
     opacity: 0.6;
   }
