--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ a.logo {
   position: absolute;
   z-index: 1000;
   right: 10%;
+  font-size: 2rem;
+}
+
+
+.navbar .fa-bars {
+  color: var(--primary);
+  font-size: 16px;
 }
 
 .menu {
