Add javascript form validation

--- a/style.css
+++ b/style.css
@@ -796,6 +796,20 @@ footer {
   margin-bottom: 10px;
 }
 
+.error {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  text-align: center;
+  color: #fff;
+}
+
+.error.active {
+  padding: 0.4em;
+}
+
 .inner-div {
   padding-top: 80px;
   margin-right: 24px;
@@ -835,7 +849,7 @@ footer {
   transform: translate(7%);
 }
 
-.form {
+.contact-form {
   display: flex;
   flex-direction: column;
   margin-right: 24px;
@@ -1598,6 +1612,21 @@ button:active {
     justify-content: center;
   }
 
+  .error {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    color: #fff;
+  }
+
+  .error.active {
+    padding: 0.3em;
+  }
+
+
   .contact-title {
     font-family: "Poppins", sans-serif;
     font-style: normal;
@@ -1624,7 +1653,7 @@ button:active {
     color: #ebebff;
   }
 
-  .form {
+  .contact-form {
     display: flex;
     flex-direction: column;
   }
